--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -117,7 +117,17 @@ input:checked + .slider:before {
 }
 
 .progress-bar-box {
-  background-color: white;
+  background-color: #f2f2f2;
+  width: 100%;
+  height: 2.5em;
+  border-radius: 5px;
+}
+
+.progress-bar-timer {
+  background-color: #c4c4c4;
+  width: 20%;
+  height: 2.5em;
+  border-radius: 5px;
 }
 
 .pomodoro-timer-button {
