--- a/styles/globals.css
+++ b/styles/globals.css
@@ -82,6 +82,7 @@ a {
   border-radius: 5em;
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 10px;
   width: 70%;
   margin: 0 15%;
@@ -94,6 +95,7 @@ a {
   border-radius: 5em;
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 10px;
   width: 70%;
   margin: 0 15%;
