--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,16 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.horizontal-scroller::-webkit-scrollbar {
+  display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+.horizontal-scroller {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 a {
   color: inherit;
   text-decoration: none;
